--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       --shadow:0 16px 40px rgba(0,0,0,.35);
       --r:16px; --maxw:1100px; --gutter:16px;
       --social-bg:#2a3f70; --tooltip-bg:#111827;
+
+      /* How much to shrink HERO cards on mobile (total) */
+      --hero-mobile-inset: 24px; /* = 12px each side */
     }
     @media (prefers-color-scheme: light){
       :root{
@@ -31,7 +34,7 @@
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
 
-    /* Shared container (all sections use the same gutter) */
+    /* Shared container */
     .container{
       max-width:var(--maxw);
       margin:0 auto;
@@ -41,12 +44,9 @@
     }
 
     /* NAV */
-    .nav{position:sticky;top:0;z-index:50;
-      background:rgba(15,23,42,.7);backdrop-filter:blur(10px);
-      border-bottom:1px solid var(--border)}
+    .nav{position:sticky;top:0;z-index:50;background:rgba(15,23,42,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
     @media (prefers-color-scheme: light){ .nav{background:rgba(255,255,255,.75)} }
 
-    /* NOW the nav row itself reuses .container; only vertical padding here */
     .nav-inner{
       display:flex;align-items:center;justify-content:space-between;gap:12px;
       padding-top:10px;padding-bottom:10px;position:relative;
@@ -62,7 +62,6 @@
     @media (max-width:760px){
       .hamburger{display:block}
       .menu{display:none}
-      /* Anchor dropdown to the inner container’s right edge */
       .menu.open{
         display:block;position:absolute;right:0;top:calc(100% + 8px);
         width:min(260px, 100%);
@@ -85,6 +84,17 @@
     /* HERO grid */
     .hero-grid{display:grid;grid-template-columns:1fr;gap:16px;width:100%}
     @media (min-width:900px){ .hero-grid{grid-template-columns:1.2fr .8fr} }
+
+    /* >>> Mobile-only narrowing for HERO cards (bio + updates) <<< */
+    @media (max-width:760px){
+      .hero-grid.narrow-mobile > .card,
+      .hero-grid.narrow-mobile > .updates {
+        /* shrink both cards a bit compared to the container/nav */
+        width: calc(100% - var(--hero-mobile-inset));
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
 
     /* Bio */
     .bio-head{display:flex;gap:16px;align-items:flex-start}
@@ -146,7 +156,6 @@
 
   <!-- NAV -->
   <header class="nav" role="banner">
-    <!-- Use the same .container wrapper so left/right gutters match cards -->
     <div class="container nav-inner">
       <div class="name">
         <span><a href="index.html" style="color:inherit;text-decoration:none"><strong>Nitish Yadav</strong></a></span>
@@ -166,8 +175,8 @@
   <!-- CONTENT -->
   <main id="content" class="container" role="main">
     <div class="flow">
-      <!-- HERO -->
-      <section class="hero-grid">
+      <!-- HERO (narrowed on mobile) -->
+      <section class="hero-grid narrow-mobile">
         <article class="card" aria-label="Brief bio">
           <div class="bio-head">
             <div class="photo">
@@ -178,29 +187,22 @@
               <p class="aff">
                 Ph.D Scholar <br>
                 <a href="https://pace.cse.iitm.ac.in/" target="_blank" rel="noopener">PACE Lab</a> <br>
-                <a href="https://www.cse.iitm.ac.in/" target="_blank" rel="noopener">Dept. of Computer Science &amp; Engg.</a> <br>
+                <a href="https://www.cse.iitm.ac.in/" target="_blank" rel="noopener">Dept. of CSE</a> <br>
                 <a href="https://www.iitm.ac.in/" target="_blank" rel="noopener">IIT Madras</a>
               </p>
 
-              <!-- Actions -->
               <div class="social-icons" aria-label="External profiles and actions">
                 <!-- Email copy -->
-                <button class="icon-btn copy-email"
-                  type="button"
-                  data-email="cs23d011@smail.iitm.ac.in"
-                  data-tip="Copy email"
-                  aria-label="Copy IITM smail email">
+                <button class="icon-btn copy-email" type="button" data-email="cs23d011@smail.iitm.ac.in" data-tip="Copy email" aria-label="Copy IITM smail email">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"
-                          fill="none" stroke="currentColor" stroke-width="1.7" stroke-linejoin="round"/>
+                    <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linejoin="round"/>
                     <path d="M3 8l9 6 9-6" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
                   <span class="sr-only">Copy cs23d011@smail.iitm.ac.in</span>
                 </button>
 
                 <!-- Google Scholar -->
-                <a class="icon-btn" href="https://scholar.google.com/citations?user=MtQL75IAAAAJ&hl=en"
-                   target="_blank" rel="noopener" aria-label="Google Scholar" data-tip="Google Scholar" title="Google Scholar">
+                <a class="icon-btn" href="https://scholar.google.com/citations?user=MtQL75IAAAAJ&hl=en" target="_blank" rel="noopener" aria-label="Google Scholar" data-tip="Google Scholar" title="Google Scholar">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M2 9l10-4 10 4-10 4-10-4z"/>
                     <path d="M7 12v3l5 2 5-2v-3" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
@@ -209,8 +211,7 @@
                 </a>
 
                 <!-- GitHub -->
-                <a class="icon-btn" href="https://github.com/yadavnitishYN"
-                   target="_blank" rel="noopener" aria-label="GitHub" data-tip="GitHub" title="GitHub">
+                <a class="icon-btn" href="https://github.com/yadavnitishYN" target="_blank" rel="noopener" aria-label="GitHub" data-tip="GitHub" title="GitHub">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M12 .5A11.5 11.5 0 0 0 .5 12 11.5 11.5 0 0 0 8.4 22.9c.6.1.8-.3.8-.6v-2.2c-3.2.7-3.9-1.5-3.9-1.5-.5-1.2-1.1-1.5-1.1-1.5-.9-.6.1-.6.1-.6 1 .1 1.5 1.1 1.5 1.1 .9 1.5 2.5 1.1 3.1.8.1-.7.4-1.1.7-1.4-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.6.1-3.2 0 0 1-.3 3.3 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2 .6 1.6.2 2.9.1 3.2 .8.8 1.2 1.9 1.2 3.2 0 4.6-2.7 5.6-5.3 5.9.4.3.7.9.7 1.9v2.8c0 .3.2.7.8.6A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5z"/>
                   </svg>
@@ -218,8 +219,7 @@
                 </a>
 
                 <!-- ORCID -->
-                <a class="icon-btn" href="https://orcid.org/0009-0008-9802-3417"
-                   target="_blank" rel="noopener" aria-label="ORCID" data-tip="ORCID" title="ORCID">
+                <a class="icon-btn" href="https://orcid.org/0009-0008-9802-3417" target="_blank" rel="noopener" aria-label="ORCID" data-tip="ORCID" title="ORCID">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="1.6"/>
                     <rect x="7.6" y="8" width="1.8" height="8" rx=".9" />
@@ -230,8 +230,7 @@
                 </a>
 
                 <!-- LinkedIn -->
-                <a class="icon-btn" href="https://www.linkedin.com/in/nitishyadavny"
-                   target="_blank" rel="noopener" aria-label="LinkedIn" data-tip="LinkedIn" title="LinkedIn">
+                <a class="icon-btn" href="https://www.linkedin.com/in/nitishyadavny" target="_blank" rel="noopener" aria-label="LinkedIn" data-tip="LinkedIn" title="LinkedIn">
                   <svg viewBox="0 0 24 24" aria-hidden="true">
                     <rect x="3" y="3" width="18" height="18" rx="3" ry="3" fill="none" stroke="currentColor" stroke-width="1.6"/>
                     <rect x="7" y="10" width="2.2" height="7" rx="1.1"/>
