--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Nitish Yadav</title>
   <meta name="description" content="Nitish Yadav — Doctoral Research Scholar, IIT Madras. Research in Automated Formal Verification, Distributed Systems, and Model Checking." />
   <link rel="icon" href="home-button.png" />
+  <!-- Preload hero image -->
   <link rel="preload" as="image" href="IMG_0625.jpeg?v=1" fetchpriority="high" />
 
   <style>
@@ -15,9 +16,6 @@
       --shadow:0 16px 40px rgba(0,0,0,.35);
       --r:16px; --maxw:1100px; --gutter:16px;
       --social-bg:#2a3f70; --tooltip-bg:#111827;
-
-      /* How much to shrink HERO cards on mobile (total) */
-      --hero-mobile-inset: 24px; /* = 12px each side */
     }
     @media (prefers-color-scheme: light){
       :root{
@@ -34,7 +32,7 @@
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
 
-    /* Shared container */
+    /* Shared container: nav + content use the SAME wrapper & gutters */
     .container{
       max-width:var(--maxw);
       margin:0 auto;
@@ -43,13 +41,16 @@
       padding-top:16px; padding-bottom:16px;
     }
 
-    /* NAV */
-    .nav{position:sticky;top:0;z-index:50;background:rgba(15,23,42,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
+    /* NAV (bar spans full width; inner row is a .container) */
+    .nav{
+      position:sticky;top:0;z-index:50;
+      background:rgba(15,23,42,.7);backdrop-filter:blur(10px);
+      border-bottom:1px solid var(--border)
+    }
     @media (prefers-color-scheme: light){ .nav{background:rgba(255,255,255,.75)} }
-
     .nav-inner{
       display:flex;align-items:center;justify-content:space-between;gap:12px;
-      padding-top:10px;padding-bottom:10px;position:relative;
+      padding-top:10px; padding-bottom:10px; position:relative;
     }
     .name{font-weight:800;font-size:20px}
     .menu{display:flex;gap:14px;align-items:center}
@@ -58,7 +59,6 @@
     .hamburger{display:none;background:none;border:1px solid var(--border);
       padding:8px 10px;border-radius:10px;cursor:pointer;color:var(--text)}
     .hamburger:focus-visible{outline:2px solid var(--accent)}
-
     @media (max-width:760px){
       .hamburger{display:block}
       .menu{display:none}
@@ -66,7 +66,7 @@
         display:block;position:absolute;right:0;top:calc(100% + 8px);
         width:min(260px, 100%);
         background:var(--card);border:1px solid var(--border);
-        border-radius:14px;box-shadow:var(--shadow);padding:6px;animation:menuIn .18s ease-out;
+        border-radius:14px;box-shadow:var(--shadow);padding:6px;animation:menuIn .18s ease-out
       }
       .menu a{display:block;width:100%;padding:12px;border-radius:10px}
       .menu a:hover{background:var(--accent-weak);text-decoration:none}
@@ -78,23 +78,11 @@
     .card{background:var(--card);border:1px solid var(--border);
       border-radius:var(--r);box-shadow:var(--shadow);padding:18px;width:100%}
     .card h2{margin:0 0 10px 0;font-size:20px}
-
     .flow{display:grid;grid-auto-rows:auto;row-gap:16px}
 
     /* HERO grid */
     .hero-grid{display:grid;grid-template-columns:1fr;gap:16px;width:100%}
     @media (min-width:900px){ .hero-grid{grid-template-columns:1.2fr .8fr} }
-
-    /* >>> Mobile-only narrowing for HERO cards (bio + updates) <<< */
-    @media (max-width:760px){
-      .hero-grid.narrow-mobile > .card,
-      .hero-grid.narrow-mobile > .updates {
-        /* shrink both cards a bit compared to the container/nav */
-        width: calc(100% - var(--hero-mobile-inset));
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
 
     /* Bio */
     .bio-head{display:flex;gap:16px;align-items:flex-start}
@@ -104,8 +92,9 @@
     .display-name{margin:0 0 6px 0;font-size:28px;line-height:1.1}
     .aff a{white-space:nowrap}
 
-    /* Icons */
-    .social-icons{margin-top:14px;display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    /* Icon row (now below the bio block) */
+    .social-icons{margin-top:14px;display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-start}
+    @media (max-width:760px){ .social-icons{justify-content:center} }
     .icon-btn{position:relative;width:46px;height:46px;border-radius:999px;background:var(--social-bg);color:#fff;
       border:1px solid rgba(0,0,0,.25);box-shadow:0 1px 0 rgba(255,255,255,.06), inset 0 0 0 1px rgba(255,255,255,.03);
       display:inline-flex;align-items:center;justify-content:center;transition:transform .12s ease, box-shadow .12s ease}
@@ -148,6 +137,7 @@
       border:1px solid rgba(255,255,255,.08);padding:10px 14px;border-radius:12px;font-size:14px;
       box-shadow:0 8px 24px rgba(0,0,0,.35);opacity:0;pointer-events:none;transition:opacity .15s ease, transform .15s ease;z-index:60}
     .toast.show{opacity:1;transform:translateX(-50%) translateY(0)}
+
     footer{margin:24px 0;color:var(--muted);font-size:14px}
   </style>
 </head>
@@ -156,6 +146,7 @@
 
   <!-- NAV -->
   <header class="nav" role="banner">
+    <!-- Same container => same left/right gutters as the cards -->
     <div class="container nav-inner">
       <div class="name">
         <span><a href="index.html" style="color:inherit;text-decoration:none"><strong>Nitish Yadav</strong></a></span>
@@ -175,72 +166,86 @@
   <!-- CONTENT -->
   <main id="content" class="container" role="main">
     <div class="flow">
-      <!-- HERO (narrowed on mobile) -->
-      <section class="hero-grid narrow-mobile">
+      <!-- HERO -->
+      <section class="hero-grid">
+        <!-- Bio card -->
         <article class="card" aria-label="Brief bio">
           <div class="bio-head">
             <div class="photo">
-              <img src="IMG_0625.jpeg?v=1" alt="Portrait of Nitish Yadav" width="200" height="200" loading="eager" fetchpriority="high" decoding="async">
+              <img src="IMG_0625.jpeg?v=1" alt="Portrait of Nitish Yadav"
+                   width="220" height="220" loading="eager" fetchpriority="high" decoding="async">
             </div>
             <div>
               <h1 class="display-name">Nitish Yadav</h1>
-              <p class="aff">
+              <!--<p>Ph.D Scholar</p>-->
+              <p style="text-align:justify"> 
                 Ph.D Scholar <br>
-                <a href="https://pace.cse.iitm.ac.in/" target="_blank" rel="noopener">PACE Lab</a> <br>
-                <a href="https://www.cse.iitm.ac.in/" target="_blank" rel="noopener">Dept. of CSE</a> <br>
-                <a href="https://www.iitm.ac.in/" target="_blank" rel="noopener">IIT Madras</a>
+                <strong>Affiliation:</strong> <a href="https://pace.cse.iitm.ac.in/" target="_blank" rel="noopener">PACE Lab</a><br>
+                <strong>Dept. &amp; Inst.:</strong> <a href="https://www.cse.iitm.ac.in/" target="_blank" rel="noopener">Computer Science and Engineering</a>,
+                <a href="https://www.iitm.ac.in/" target="_blank" rel="noopener">Indian Institute of Technology Madras</a>
               </p>
-
-              <div class="social-icons" aria-label="External profiles and actions">
-                <!-- Email copy -->
-                <button class="icon-btn copy-email" type="button" data-email="cs23d011@smail.iitm.ac.in" data-tip="Copy email" aria-label="Copy IITM smail email">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linejoin="round"/>
-                    <path d="M3 8l9 6 9-6" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
-                  <span class="sr-only">Copy cs23d011@smail.iitm.ac.in</span>
-                </button>
-
-                <!-- Google Scholar -->
-                <a class="icon-btn" href="https://scholar.google.com/citations?user=MtQL75IAAAAJ&hl=en" target="_blank" rel="noopener" aria-label="Google Scholar" data-tip="Google Scholar" title="Google Scholar">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M2 9l10-4 10 4-10 4-10-4z"/>
-                    <path d="M7 12v3l5 2 5-2v-3" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
-                  </svg>
-                  <span class="sr-only">Google Scholar</span>
-                </a>
-
-                <!-- GitHub -->
-                <a class="icon-btn" href="https://github.com/yadavnitishYN" target="_blank" rel="noopener" aria-label="GitHub" data-tip="GitHub" title="GitHub">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 .5A11.5 11.5 0 0 0 .5 12 11.5 11.5 0 0 0 8.4 22.9c.6.1.8-.3.8-.6v-2.2c-3.2.7-3.9-1.5-3.9-1.5-.5-1.2-1.1-1.5-1.1-1.5-.9-.6.1-.6.1-.6 1 .1 1.5 1.1 1.5 1.1 .9 1.5 2.5 1.1 3.1.8.1-.7.4-1.1.7-1.4-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.6.1-3.2 0 0 1-.3 3.3 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2 .6 1.6.2 2.9.1 3.2 .8.8 1.2 1.9 1.2 3.2 0 4.6-2.7 5.6-5.3 5.9.4.3.7.9.7 1.9v2.8c0 .3.2.7.8.6A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5z"/>
-                  </svg>
-                  <span class="sr-only">GitHub</span>
-                </a>
-
-                <!-- ORCID -->
-                <a class="icon-btn" href="https://orcid.org/0009-0008-9802-3417" target="_blank" rel="noopener" aria-label="ORCID" data-tip="ORCID" title="ORCID">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="1.6"/>
-                    <rect x="7.6" y="8" width="1.8" height="8" rx=".9" />
-                    <circle cx="8.5" cy="6.5" r="1" />
-                    <path d="M12.5 9.7h2.7a2.6 2.6 0 0 1 0 5.2h-2.7v-5.2zm1.8 1.6v2h.9a1 1 0 0 0 0-2h-.9z"/>
-                  </svg>
-                  <span class="sr-only">ORCID</span>
-                </a>
-
-                <!-- LinkedIn -->
-                <a class="icon-btn" href="https://www.linkedin.com/in/nitishyadavny" target="_blank" rel="noopener" aria-label="LinkedIn" data-tip="LinkedIn" title="LinkedIn">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <rect x="3" y="3" width="18" height="18" rx="3" ry="3" fill="none" stroke="currentColor" stroke-width="1.6"/>
-                    <rect x="7" y="10" width="2.2" height="7" rx="1.1"/>
-                    <circle cx="8.1" cy="7.3" r="1.3"/>
-                    <path d="M13.2 10h1.7a2.3 2.3 0 0 1 2.3 2.3V17h-2.1v-3.9c0-.8-.6-1.3-1.3-1.3s-1.3.5-1.3 1.3V17h-2.1v-7h2.8z"/>
-                  </svg>
-                  <span class="sr-only">LinkedIn</span>
-                </a>
-              </div>
             </div>
+          </div>
+
+          <!-- Icon row UNDER the bio block -->
+          <div class="social-icons" aria-label="External profiles and actions">
+            <!-- Email copy -->
+            <button class="icon-btn copy-email"
+              type="button"
+              data-email="cs23d011@smail.iitm.ac.in"
+              data-tip="Copy email"
+              aria-label="Copy IITM smail email">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M4 6h16a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2z"
+                      fill="none" stroke="currentColor" stroke-width="1.7" stroke-linejoin="round"/>
+                <path d="M3 8l9 6 9-6"
+                      fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <span class="sr-only">Copy cs23d011@smail.iitm.ac.in</span>
+            </button>
+
+            <!-- Google Scholar -->
+            <a class="icon-btn" href="https://scholar.google.com/citations?user=MtQL75IAAAAJ&hl=en"
+               target="_blank" rel="noopener" aria-label="Google Scholar" data-tip="Google Scholar" title="Google Scholar">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M2 9l10-4 10 4-10 4-10-4z"/>
+                <path d="M7 12v3l5 2 5-2v-3" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
+              </svg>
+              <span class="sr-only">Google Scholar</span>
+            </a>
+
+            <!-- GitHub -->
+            <a class="icon-btn" href="https://github.com/yadavnitishYN"
+               target="_blank" rel="noopener" aria-label="GitHub" data-tip="GitHub" title="GitHub">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 .5A11.5 11.5 0 0 0 .5 12 11.5 11.5 0 0 0 8.4 22.9c.6.1.8-.3.8-.6v-2.2c-3.2.7-3.9-1.5-3.9-1.5-.5-1.2-1.1-1.5-1.1-1.5-.9-.6.1-.6.1-.6 1 .1 1.5 1.1 1.5 1.1 .9 1.5 2.5 1.1 3.1.8.1-.7.4-1.1.7-1.4-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.6.1-3.2 0 0 1-.3 3.3 1.2a11.5 11.5 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2 .6 1.6.2 2.9.1 3.2 .8.8 1.2 1.9 1.2 3.2 0 4.6-2.7 5.6-5.3 5.9.4.3.7.9.7 1.9v2.8c0 .3.2.7.8.6A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5z"/>
+              </svg>
+              <span class="sr-only">GitHub</span>
+            </a>
+
+            <!-- ORCID -->
+            <a class="icon-btn" href="https://orcid.org/0009-0008-9802-3417"
+               target="_blank" rel="noopener" aria-label="ORCID" data-tip="ORCID" title="ORCID">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="1.6"/>
+                <rect x="7.6" y="8" width="1.8" height="8" rx=".9" />
+                <circle cx="8.5" cy="6.5" r="1" />
+                <path d="M12.5 9.7h2.7a2.6 2.6 0 0 1 0 5.2h-2.7v-5.2zm1.8 1.6v2h.9a1 1 0 0 0 0-2h-.9z"/>
+              </svg>
+              <span class="sr-only">ORCID</span>
+            </a>
+
+            <!-- LinkedIn -->
+            <a class="icon-btn" href="https://www.linkedin.com/in/nitishyadavny"
+               target="_blank" rel="noopener" aria-label="LinkedIn" data-tip="LinkedIn" title="LinkedIn">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <rect x="3" y="3" width="18" height="18" rx="3" ry="3" fill="none" stroke="currentColor" stroke-width="1.6"/>
+                <rect x="7" y="10" width="2.2" height="7" rx="1.1"/>
+                <circle cx="8.1" cy="7.3" r="1.3"/>
+                <path d="M13.2 10h1.7a2.3 2.3 0 0 1 2.3 2.3V17h-2.1v-3.9c0-.8-.6-1.3-1.3-1.3s-1.3.5-1.3 1.3V17h-2.1v-7h2.8z"/>
+              </svg>
+              <span class="sr-only">LinkedIn</span>
+            </a>
           </div>
         </article>
 
@@ -269,7 +274,7 @@
       <!-- BELOW THE HERO -->
       <article class="card">
         <h2>Research Interests</h2>
-        <p>Automated Formal Verification, Distributed Systems, Model Checking</p>
+        <p>•<strong>Formal Verification</strong> •<strong>Formal Methods</strong> •<strong>Distributed Systems</strong> •<strong>Model Checking</strong> •<strong>Cyber-Physical Systems</strong></p>
       </article>
 
       <article class="card">
@@ -316,19 +321,22 @@
       document.addEventListener('click', e => { if (!menu.contains(e.target) && !btn.contains(e.target)) closeMenu(); });
       document.addEventListener('keydown', e => { if (e.key === 'Escape') { closeMenu(); btn && btn.focus(); } });
 
+      // Last updated
       const lu = document.getElementById('lu');
       if (lu) lu.textContent = new Date().toLocaleDateString(undefined, { year:'numeric', month:'short', day:'2-digit' });
 
-      // Copy-to-clipboard for email
+      // Copy email + toast
       const toast = document.getElementById('toast');
       function showToast(){ toast.classList.add('show'); clearTimeout(showToast._t);
         showToast._t = setTimeout(()=>toast.classList.remove('show'),1600); }
       async function copyText(text){
         try{
           if(navigator.clipboard && window.isSecureContext){ await navigator.clipboard.writeText(text); }
-          else{ const ta=document.createElement('textarea'); ta.value=text; ta.setAttribute('readonly','');
+          else{
+            const ta=document.createElement('textarea'); ta.value=text; ta.setAttribute('readonly','');
             ta.style.position='fixed'; ta.style.opacity='0'; document.body.appendChild(ta);
-            ta.select(); document.execCommand('copy'); document.body.removeChild(ta); }
+            ta.select(); document.execCommand('copy'); document.body.removeChild(ta);
+          }
           showToast();
         }catch(e){ console.warn('Copy failed', e); }
       }
