--- a/index.html
+++ b/index.html
@@ -86,19 +86,24 @@
 
     /* Bio */
     .bio-head{display:flex;gap:16px;align-items:flex-start}
-    /* ↓↓↓ Smaller portrait: 120px on phones, 160px on laptops/desktops */
+    /* Smaller portrait: 120px on phones, 160px on laptops/desktops */
     .photo{width:120px;height:120px;border-radius:14px;overflow:hidden;border:1px solid var(--border);flex:0 0 auto;background:#222}
     @media (min-width:900px){ .photo{width:160px;height:160px} }
     .photo img{width:100%;height:100%;object-fit:cover;image-rendering:auto}
     .display-name{margin:0 0 6px 0;font-size:28px;line-height:1.1}
     .aff a{white-space:nowrap}
 
-    /* Icon row (below the bio block) */
-    .social-icons{margin-top:14px;display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-start}
-    @media (max-width:760px){ .social-icons{justify-content:center} }
-    .icon-btn{position:relative;width:46px;height:46px;border-radius:999px;background:var(--social-bg);color:#fff;
+    /* Icon row (centered on all screens) */
+    .social-icons{
+      margin-top:14px;
+      display:flex;gap:10px;align-items:center;flex-wrap:wrap;
+      justify-content:center;
+    }
+    .icon-btn{
+      position:relative;width:46px;height:46px;border-radius:999px;background:var(--social-bg);color:#fff;
       border:1px solid rgba(0,0,0,.25);box-shadow:0 1px 0 rgba(255,255,255,.06), inset 0 0 0 1px rgba(255,255,255,.03);
-      display:inline-flex;align-items:center;justify-content:center;transition:transform .12s ease, box-shadow .12s ease}
+      display:inline-flex;align-items:center;justify-content:center;transition:transform .12s ease, box-shadow .12s ease
+    }
     .icon-btn:hover{transform:translateY(-1px);box-shadow:0 6px 18px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.08)}
     .icon-btn svg{width:22px;height:22px;fill:currentColor}
     .icon-btn[data-tip]::after{
@@ -147,6 +152,7 @@
 
   <!-- NAV -->
   <header class="nav" role="banner">
+    <!-- Same container => same left/right gutters as the cards -->
     <div class="container nav-inner">
       <div class="name">
         <span><a href="index.html" style="color:inherit;text-decoration:none"><strong>Nitish Yadav</strong></a></span>
@@ -172,7 +178,6 @@
         <article class="card" aria-label="Brief bio">
           <div class="bio-head">
             <div class="photo">
-              <!-- width/height updated to 160 to match desktop size -->
               <img src="IMG_0625.jpeg?v=1" alt="Portrait of Nitish Yadav"
                    width="160" height="160" loading="eager" fetchpriority="high" decoding="async">
             </div>
@@ -187,7 +192,7 @@
             </div>
           </div>
 
-          <!-- Icon row UNDER the bio block -->
+          <!-- Icon row UNDER the bio block (centered) -->
           <div class="social-icons" aria-label="External profiles and actions">
             <!-- Email copy -->
             <button class="icon-btn copy-email"
@@ -279,8 +284,8 @@
 
       <article class="card">
         <h2>Education</h2>
-        <ul style="margin:0;padding-left:18px">
-          <li style="margin:8px 0">
+        <ul style="margin:0;padding-left:18px" >
+          <li style="margin:8px 0" >
             <strong>Ph.D</strong>, <a href="https://www.cse.iitm.ac.in/" target="_blank" rel="noopener">Department of Computer Science &amp; Engineering</a>,
             <a href="https://www.iitm.ac.in/" target="_blank" rel="noopener">Indian Institute of Technology Madras</a>, 2023–Present
           </li>
