--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <!-- BELOW THE HERO -->
       <article class="card">
         <h2>Research Interests</h2>
-        <p>•<strong>Formal Verification</strong> •<strong>Formal Methods</strong> •<strong>Distributed Systems</strong> •<strong>Model Checking</strong> •<strong>Cyber-Physical Systems</strong></p>
+        <p>•<strong> Automated Formal Verification</strong> •<strong> Formal Methods</strong> •<strong> Distributed Systems</strong> •<strong> Model Checking</strong> •<strong> Cyber-Physical Systems</strong></p>
       </article>
 
       <article class="card">
