--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
           <li class="nav-item"><a class="nav-link" href="publication.html">Publications</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+          <!--<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>-->
           <li class="nav-item ms-md-3">
             <!-- Theme switcher -->
             <div class="btn-group btn-group-sm" role="group" aria-label="Theme">
