--- a/publication.html
+++ b/publication.html
@@ -102,7 +102,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="publication.html">Publications</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+          <!--<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>-->
           <li class="nav-item ms-md-3">
             <div class="btn-group btn-group-sm" role="group" aria-label="Theme">
               <button type="button" class="btn btn-outline-secondary" data-theme-value="light">Light</button>
