--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           <article class="card ny-card">
             <div class="card-body">
               <h2 class="h5">Research Interests</h2>
-              <p class="mb-0 text-justify">
+              <p class="mb-0">
                 • <strong>Automated Formal Verification</strong>
                 • <strong>Formal Methods</strong>
                 • <strong>Distributed Systems</strong>
@@ -273,7 +273,7 @@
           <article class="card ny-card">
             <div class="card-body">
               <h2 class="h5">Education</h2>
-              <ul class="mb-0 text-justify">
+              <ul class="mb-0">
                 <li class="my-2">
                   <strong>Ph.D</strong>, <a href="https://www.cse.iitm.ac.in/" target="_blank" rel="noopener">Department of Computer Science &amp; Engineering</a>,
                   <a href="https://www.iitm.ac.in/" target="_blank" rel="noopener">Indian Institute of Technology Madras</a>, 2023–Present
